React router was installed. Basic navigation to empty components was set up

--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
         "urix": "^0.1.0"
+    },
+    "dependencies": {
+        "react-router-dom": "^5.2.0"
     }
 }
