Universal cookie npm package installed

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "urix": "^0.1.0"
     },
     "dependencies": {
-        "react-router-dom": "^5.2.0"
+        "react-router-dom": "^5.2.0",
+        "universal-cookie": "^4.0.4"
     }
 }
